--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 	<section id="particles-js">
 		<div class="text">
-			<h2>Selamat Idul Fitri 1444 H<br><span>Minal Aidin Wal-Faidzin</span></h2>
+			<h2>Selamat Idull Fitri 1444 H<br><span>Minal Aidin Wal-Faidzin</span></h2>
 			<div class="animasi-teks">
 				<p><b>Marilah kita bangkit dan meraih kemenangan di hari yang penuh kemuliaan ini. Semoga perjuangan kita selama sebulan terakhir menjadikan kita cahaya yang selalu bersinar dalam menerangi sesama manusia dengan kebahagiaan. Selamat Idul Fitri 1444 H.</b></p>
 				<hr>
