--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
 			</div>
 		</div>
 		<div class="masjid"></div>
+		 <button type="button" id="tombol-musik" style="display: none;" class="btn btn-light btn-sm rounded-circle btn-music" onclick="play(this)" data-status="true" data-url="sound.mp3">
+        <i class="fa-solid fa-circle-pause"></i>
+    </button>
+
 	</section>
 
 	<script src="particles.js"></script>
